--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     ]
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node src/index.js",
+    "test": "mocha src/server/specs.js"
+
   },
   "keywords": [
     "express",
